<package format="2">
  <name>particle_filter_project</name>
  <version>0.0.0</version>
  <description>
  
  
  All the generated map (distance image, likelihood image, SLAM image) are directly in src folder
  # How to run:
  Create a ~/catkin_ws/src and put all the files into this folder. Modify the image path in likelihood_field_model.py to your path to image
  Specifically, this line: input_image = cv2.imread('map.png', cv2.IMREAD_GRAYSCALE)
  You may need to do chmod+x to give executable permision to python files
  You can see the output of the  sampled motion model in terminal and visualization of senser model by plot package

  </description>
  <maintainer email="shifanzhu@umass.edu">Sarah Sebo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>